--- a/customitems/fishy_charm.yml
+++ b/customitems/fishy_charm.yml
@@ -1,9 +1,9 @@
 isEnabled: true
 material: COD
-name: '&bFishy Charm'
+name: '&b鱼之护符'
 lore:
-- '&aThere''s just something not'
-- '&aquite right with this one...'
+- '&a这个护符'
+- '&a总觉得有点不对劲...'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
