--- a/menus/buy_or_sell_menu.yml
+++ b/menus/buy_or_sell_menu.yml
@@ -1,21 +1,21 @@
-Shop name: '[EM] Custom Item Shop'
+Shop name: '[EM] 自定义物品商店'
 Information button slot: 4
 Buy slot: 11
 Sell slot: 15
 Information button:
   material: PLAYER_HEAD
-  name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
+  name: '&4&lEliteMobs &r&c插件开发者: &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
-  - '&aClick on the emerald to buy items!'
-  - '&cClick on the redstone to sell items!'
+  - '&8译者:qsefthuopq'
+  - '&a点击绿宝石购买物品!'
+  - '&c点击红石出售物品!'
   owner: magmaguy
 Buy procedurally generated items:
   material: EMERALD
-  name: Buy items
+  name: 购买物品
 Buy custom items:
   material: EMERALD
-  name: Buy custom items
+  name: 购买自定义物品
 Sell items:
   material: REDSTONE
-  name: Sell items
+  name: 出售物品
