--- a/menus/quest_menu.yml
+++ b/menus/quest_menu.yml
@@ -1,43 +1,41 @@
-questTierSelectorMenuTitle: '[EM] Quest Tier Selection'
-questSelectorMenuTitle: '[EM] Quest Selection'
-cancelQuestMessage1: '&c&l&m&o---------------------------------------------&cYou can
-  only have one quest at a time! Cancelling your ongoing quest will reset quest progress!'
-cancelQuestMessage2: '&2[Click here to cancel current quest!]'
-cancelQuestMessage3: '&7You can see your quest status with the command &a/em quest
-  status&c&l&m&o---------------------------------------------'
-questCancelMessage: '&7[EliteMobs] &cYour ongoing quest has been cancelled!'
-questStartTitle: You have accepted a quest!
-questStartSubtitle: Slay $objectiveAmount $objectiveName
-questCompleteTitle: Quest complete!
-questCompleteSubtitle: You have slain $objectiveAmount $objectiveName
-bossBarObjective: Slay $objectiveAmount $objectiveName
-questRewardMessage: '&7[EM] &aQuest completed! &6Your reward is &2$reward $currencyName'
-questCompleteBroadcastMessage: '&7[EM] $player &2has completed a $rank &2quest!'
-questStatusMessage: '&7[EM] &aYou''ve slain &a$currentAmount &f/ &c$objectiveAmount
-  &a$objectiveName'
+questTierSelectorMenuTitle: '[EM] 选择任务等级'
+questSelectorMenuTitle: '[EM] 选择任务'
+cancelQuestMessage1: '&c&l&m&o---------------------------------------------&c你一次只能接受一个任务!
+  取消你进行中的任务会重置任务进度!'
+cancelQuestMessage2: '&2[点击取消任务]'
+cancelQuestMessage3: '&7你可以输入 &a/em quest查看任务状态&c&l&m&o---------------------------------------------'
+questCancelMessage: '&7[精英怪物] &c已取消你进行中的任务!'
+questStartTitle: 你成功地接受了一个任务!
+questStartSubtitle: 杀死$objectiveAmount只$objectiveName
+questCompleteTitle: 任务完成!
+questCompleteSubtitle: 你已杀死$objectiveAmount只$objectiveName
+bossBarObjective: 杀死$objectiveAmount只$objectiveName
+questRewardMessage: '&7[EM] &a任务完成! &你获得了奖励：&2$reward $currencyName'
+questCompleteBroadcastMessage: '&7[EM] $player &2完成了$rank&2任务!'
+questStatusMessage: '&7[EM] &a你已杀死&a$currentAmount &f/ &c$objectiveAmount 只&a$objectiveName'
 validTierButton:
   material: GREEN_STAINED_GLASS_PANE
-  name: §2Take on a $rank §2quest!
+  name: §2接受$rank§2任务!
   lore:
-  - §aAccept a $rank §aquest and
-  - §aget special rewards!
+  - §a点击接受$rank§a任务
+  - §a以获取特殊奖励!
 inactiveTierButton:
   material: YELLOW_STAINED_GLASS_PANE
-  name: §6You can get a $rank §6quest!
+  name: §6你可以接受$rank§6任务!
   lore:
-  - §eChange your active guild rank
-  - §eto $rank §eto accept there quests!
+  - §e将公会等级更改为$rank
+  - §e才能接受这三个任务!
 invalidTierButton:
   material: RED_STAINED_GLASS_PANE
-  name: §4You can't get a $rank §4quest yet!
+  name: §4你还不能接受$rank§4任务!
   lore:
-  - '§cYou must first unlock the '
-  - $rank §cguild rank
-  - §cto accept these quests!
+  - §c你必须先解锁
+  - $rank§c的公会
+  - §c才能接受这三个任务!
 killObjectiveButton:
   material: YELLOW_STAINED_GLASS_PANE
-  name: §2Kill $objectiveAmount $objectiveName
+  name: §2杀死$objectiveAmount只$objectiveName
   lore:
-  - §aKill $objectiveAmount $objectiveName §amobs.
-  - '§fProgress: §a$currentAmount §f/§c $objectiveAmount'
-  - '§aReward: §e $rewardAmount'
+  - §a杀死$objectiveAmount只$objectiveName§a怪物.
+  - '§f任务进度: §a$currentAmount §f/§c $objectiveAmount'
+  - '§a任务奖励: §e $rewardAmount'
