--- a/mobproperties/elite_wither_skeleton.yml
+++ b/mobproperties/elite_wither_skeleton.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: WITHER_SKELETON
-name: '&fLvl &2$level &fElite &8Wither Skeleton'
+name: '&2$level级&f精英&8凋灵骷髅'
 deathMessages:
-- $entity's arrows withered away $player!
-- $entity's has withered $player away!
+- $entity使$player凋零了!
+- $entity杀死了$player!
