--- a/customitems/elephant_charm.yml
+++ b/customitems/elephant_charm.yml
@@ -1,10 +1,9 @@
 isEnabled: true
 material: ANVIL
-name: '&bElephant Charm'
+name: '&b巨象护符'
 lore:
-- '&aGain the power of an elephant'
-- '&astampede, for the cost of the'
-- '&aspeed of an elephant stampede!'
+- '&a获得巨象之力'
+- '&a战争践踏!'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
