--- a/enchantments/soulbind.yml
+++ b/enchantments/soulbind.yml
@@ -1,6 +1,6 @@
 isEnabled: true
-name: Soulbind
+name: 灵魂绑定
 maxLevel: 1
 value: 10.0
-loreString: '&6Soulbound to &f$player'
-hologramString: $player&f's
+loreString: '&6绑定了&f$player的灵魂'
+hologramString: $player&f的
