--- a/menus/procedural_shop_menu.yml
+++ b/menus/procedural_shop_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Procedural Item Shop'
+Shop name: '[EM] 物品商店'
 Reroll button slot: 4
 Store item slots:
 - 9
@@ -48,11 +48,10 @@ Store item slots:
 - 53
 Minimum store item tier: 0
 Maximum store item tier: 5
-Full inventory message: '&7[EliteMobs] &4Your inventory is full! You can''t buy items
-  until you get some free space.'
+Full inventory message: '[精英怪物] &4你的背包满了! 你塞不下这么多东西了.'
 Reroll button:
   material: PLAYER_HEAD
-  name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
+  name: '&4&lEliteMobs &r&c插件开发者: &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
+  - '&8插件译者:qsefthuopq'
   owner: magmaguy
