--- a/mobproperties/elite_iron_golem.yml
+++ b/mobproperties/elite_iron_golem.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: IRON_GOLEM
-name: '&fLvl &2$level &fElite &fIron Golem'
+name: '&2$level级&f精英&f铁傀儡'
 deathMessages:
-- $player messed with the wrong $entity!
-- $player has been taught the way of fist by $entity!
+- $player碰上了硬茬$entity!
+- $player被$entity一拳拍飞了!
