--- a/mobproperties/elite_polar_bear.yml
+++ b/mobproperties/elite_polar_bear.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: POLAR_BEAR
-name: '&fLvl &2$level &fElite &fPolar Bear'
+name: '&2$level级&f精英&f北极熊'
 deathMessages:
-- $player was clawed to death by $entity!
-- $player was mauled to death by $entity!
+- $player被$entity一爪拍死了!
+- $player被$entity撕成碎片!
