--- a/mobproperties/elite_vindicator.yml
+++ b/mobproperties/elite_vindicator.yml
@@ -1,5 +1,5 @@
 isEnabled: true
 entityType: VINDICATOR
-name: '&fLvl &2$level &fElite &7Vindicator'
+name: '&2$level级&f精英&7卫道士'
 deathMessages:
-- $entity has vindicated his combat skills from $player!
+- $entity教会了$player如何战斗!
